# gpt-http

./: .gitignore  README.md  app.py  data.sqlite  example1.readme.md  gpt_http.py  mutate-prompt.txt  notes.txt  product-detail.convo.txt  pyproject.toml  repl2.py  requirements.txt  sample2.convo.txt  setup.cfg  view-prompt.txt
migrations/versions/: 4ce0487d9c7f_init.py
templates/: base.html  frame-test.html
