[tool.poetry]
name = "gpt-http"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"
packages = [{include = "gpt_http"}]

[tool.poetry.dependencies]
python = "3.11.3"
aiohttp = "3.8.4"
aiosignal = "1.3.1"
alembic = "1.11.1"
async-timeout = "4.0.2"
attrs = "23.1.0"
certifi = "2023.5.7"
charset-normalizer = "3.1.0"
click = "8.1.3"
flask = "2.3.2"
flask-login = "0.6.2"
flask-migrate = "4.0.4"
flask-sqlalchemy = "3.0.3"
flask-wtf = "1.1.1"
frozenlist = "1.3.3"
greenlet = "2.0.2"
idna = "3.4"
importlib-metadata = "6.6.0"
importlib-resources = "5.12.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
mako = "1.2.4"
markupsafe = "2.1.2"
multidict = "6.0.4"
openai = "0.27.7"
pipm = "22.2.3"
requests = "2.31.0"
sqlalchemy = "2.0.15"
tqdm = "4.65.0"
typing-extensions = "4.6.2"
urllib3 = "2.0.2"
werkzeug = "2.3.4"
wtforms = "3.0.1"
yachalk = "0.1.5"
yarl = "1.9.2"
zipp = "3.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
